lib/src/yolo_ffi_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/yolo_ffi.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class YoloFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  YoloFfiBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  YoloFfiBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void load_model(ffi.Pointer<ffi.Char> model_path) {
    return _load_model(model_path);
  }

  late final _load_modelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'load_model',
      );
  late final _load_model = _load_modelPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> get_model_input_name() {
    return _get_model_input_name();
  }

  late final _get_model_input_namePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'get_model_input_name',
      );
  late final _get_model_input_name = _get_model_input_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  void free_string(ffi.Pointer<ffi.Char> str) {
    return _free_string(str);
  }

  late final _free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'free_string',
      );
  late final _free_string = _free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void close_model() {
    return _close_model();
  }

  late final _close_modelPtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>(
    'close_model',
  );
  late final _close_model = _close_modelPtr.asFunction<void Function()>();

  DetectionResult yolo_detect(
    ffi.Pointer<ffi.Uint8> image_data,
    int height,
    int width,
    double conf_threshold,
    double nms_threshold,
  ) {
    return _yolo_detect(
      image_data,
      height,
      width,
      conf_threshold,
      nms_threshold,
    );
  }

  late final _yolo_detectPtr =
      _lookup<
        ffi.NativeFunction<
          DetectionResult Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
            ffi.Float,
            ffi.Float,
          )
        >
      >('yolo_detect');
  late final _yolo_detect = _yolo_detectPtr
      .asFunction<
        DetectionResult Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          double,
          double,
        )
      >();

  void free_result(DetectionResult result) {
    return _free_result(result);
  }

  late final _free_resultPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DetectionResult)>>(
        'free_result',
      );
  late final _free_result = _free_resultPtr
      .asFunction<void Function(DetectionResult)>();

  ffi.Pointer<ffi.Uint8> convert_image(
    ImageFormat format,
    ffi.Pointer<ffi.Uint8> plane0,
    ffi.Pointer<ffi.Uint8> plane1,
    ffi.Pointer<ffi.Uint8> plane2,
    int bytesPerRow0,
    int bytesPerRow1,
    int bytesPerRow2,
    int bytesPerPixel1,
    int bytesPerPixel2,
    int width,
    int height,
    bool isAndroid,
  ) {
    return _convert_image(
      format.value,
      plane0,
      plane1,
      plane2,
      bytesPerRow0,
      bytesPerRow1,
      bytesPerRow2,
      bytesPerPixel1,
      bytesPerPixel2,
      width,
      height,
      isAndroid,
    );
  }

  late final _convert_imagePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
            ffi.UnsignedInt,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Bool,
          )
        >
      >('convert_image');
  late final _convert_image = _convert_imagePtr
      .asFunction<
        ffi.Pointer<ffi.Uint8> Function(
          int,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          bool,
        )
      >();

  void free_rgba_buffer(ffi.Pointer<ffi.Uint8> buffer) {
    return _free_rgba_buffer(buffer);
  }

  late final _free_rgba_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
        'free_rgba_buffer',
      );
  late final _free_rgba_buffer = _free_rgba_bufferPtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();
}

final class DetectionResult extends ffi.Struct {
  external ffi.Pointer<ffi.Float> bboxes;

  @ffi.Int()
  external int count;
}

enum ImageFormat {
  YUV420(1),
  BGRA8888(2),
  NV21(4);

  final int value;
  const ImageFormat(this.value);

  static ImageFormat fromValue(int value) => switch (value) {
    1 => YUV420,
    2 => BGRA8888,
    4 => NV21,
    _ => throw ArgumentError("Unknown value for ImageFormat: $value"),
  };
}

/// Forward declare the session container struct.
final class OrtSessionContainer extends ffi.Opaque {}

final class NcnnContainer extends ffi.Opaque {}
